--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
+    "redux-persist": "^6.0.0",
     "reselect": "^4.1.6",
     "sass": "^1.55.0",
     "styled-components": "^5.3.6",
