--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.7.1",
     "@reduxjs/toolkit": "^1.8.6",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "firebase": "^9.10.0",
+    "graphql": "^16.6.0",
     "immer": "^9.0.15",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
@@ -18,7 +20,7 @@
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "sass": "^1.55.0",
-    "styled-components": "^5.3.6",
+    "styled-components": "5.3.6",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
