--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.6",
+    "@stripe/react-stripe-js": "^1.16.1",
+    "@stripe/stripe-js": "^1.46.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "dotenv": "^16.0.3",
     "firebase": "^9.10.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
@@ -17,6 +20,7 @@
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "sass": "^1.55.0",
+    "stripe": "^11.3.0",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
