--- a/package.json
+++ b/package.json
@@ -3,26 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@reduxjs/toolkit": "^1.8.6",
-    "@stripe/react-stripe-js": "^1.16.1",
-    "@stripe/stripe-js": "^1.46.0",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "dotenv": "^16.0.3",
-    "firebase": "^9.10.0",
-    "prop-types": "^15.8.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-redux": "^8.0.4",
-    "react-router-dom": "^6.4.1",
+    "@mui/icons-material": "5.11.0",
+    "@mui/material": "5.11.0",
+    "@reduxjs/toolkit": "1.9.1",
+    "@stripe/react-stripe-js": "1.16.1",
+    "@stripe/stripe-js": "1.46.0",
+    "dotenv": "16.0.3",
+    "firebase": "9.10.0",
+    "install": "0.13.0",
+    "npm": "9.2.0",
+    "prop-types": "15.8.1",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-redux": "8.0.4",
+    "react-router-dom": "6.4.1",
     "react-scripts": "5.0.1",
-    "redux-logger": "^3.0.6",
-    "redux-persist": "^6.0.0",
-    "sass": "^1.55.0",
-    "stripe": "^11.3.0",
-    "uuid": "^9.0.0",
-    "web-vitals": "^2.1.4"
+    "redux-logger": "3.0.6",
+    "redux-persist": "6.0.0",
+    "sass": "1.55.0",
+    "stripe": "11.3.0",
+    "uuid": "9.0.0",
+    "web-vitals": "2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -49,7 +50,7 @@
     ]
   },
   "devDependencies": {
-    "@zarconontol/enzyme-adapter-react-18": "^0.7.3",
-    "enzyme": "^3.11.0"
+    "@wojtekmaj/enzyme-adapter-react-17": "0.8.0",
+    "enzyme": "3.11.0"
   }
 }
